# web_fuzzer

./: .env  .gitignore  README.md  Testing_Result.json  broken_access_control.py  command_injection.py  command_injection_bypass.py  crawler.py  crawling.py  dictionary_file.txt  fuzzer.py  generate_report.py  hello.py  lfi.py  lfi_bypass.py  pyproject.toml  readme.md  requirements.txt  result_urls.txt  sql_injection.py  test.html  web_scan_report.html  xss.py  xss_bypass.py
static/dictionary/: user.dictionary.txt
test/example/dvwa/: Testing_Result.json  web_scan_report.html
test/example/dvwm/: Testing_Result.json  readme.md  result_urls.txt
web_fuzzer/: main.py
web_fuzzer/crawler/: crawler.py
web_fuzzer/doc/: generate_report.py
web_fuzzer/vulnerabilities/: broken_access_control.py  command_injection.py  command_injection_bypass.py  lfi.py  sql_injection.py  xss.py  xss_bypass.py
