[tool.poetry]
name = "web-fuzzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_fuzzer"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
crawler = "^0.0.2"
fuzzingbook = "^1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "web_fuzzer.main:main"
